Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntObjUndefinedField.quorum
class Main
    Integer int
    action Main
        int = cast(integer, undefined)
        if int = undefined
            output "passed"
        end
    end
end