Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntegerUndefinedField.quorum
class Main
    integer int
    action Main
        int = cast(integer, undefined)
    end
end